# Hinglish_Hindi_WSD

./: .gitmodules  LICENSE  Lesk Algorithm  Modified Lesk Algorithm  README.md  setup.cfg
dataset/: Hindi_WSD_Dataset - Sheet1.tsv  README.md
src/hinglish-hindi-wsd/: hi.pkl  hinglish-hindi-wsd.py  hipos.py  lesks.py  out.txt  requirements.txt  test.txt  wsd.py
