[metadata]
name = hinglish-hindi-wsd
version = 0.0.1
author = Praatibh Surana, Mirza Yusuf
author_email = praatibhsurana@gmail.com 
description = A pipeline for transliteration of hinglish code mixed data to hindi along with spell correction and word sense disambiguation of hindi words. 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/praatibhsurana/Hinglish-Hindi-WSD
project_urls =
    Bug Tracker = https://github.com/praatibhsurana/Hinglish-Hindi-WSD/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src